<resources>
    <string name="app_name">FootyWiz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">Welcome!</string>
    <string name="view_text">View Squads</string>
    <string name="build_text">Build Squad</string>
    <string name="title_activity_view_squads">Select the league</string>
    <string name="select_league_text">Select the league</string>
    <string name="england">English Premier League</string>
    <string name="spain">La Liga (Spain)</string>
    <string name="portugal">Primeira Liga (Portugal)</string>
    <string name="germany">German Bundesliga</string>
    <string name="france">Ligue 1 (France)</string>
    <string name="title_activity_build_squad">BuildSquadActivity</string>
    <string name="title_activity_squad_list_view">Select the team</string>
    <string name="title_activity_selected_squad_list">View your team</string>
    <string name="title_activity_select_formation">Select the Formation</string>
    <string name="title_activity_squad_builder">SquadBuilder</string>
    
</resources>
