<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.rahulchandrashekhar.footywiz.ViewSquadsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_league_text"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/england"
        android:id="@+id/england_view"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/germany"
        android:id="@+id/germany_view"
        android:layout_below="@+id/england_view"
        android:layout_alignRight="@+id/england_view"
        android:layout_alignEnd="@+id/england_view"
        android:layout_marginTop="24dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spain"
        android:id="@+id/spain_view"
        android:layout_below="@+id/germany_view"
        android:layout_alignLeft="@+id/germany_view"
        android:layout_alignStart="@+id/germany_view"
        android:layout_marginTop="25dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/france"
        android:id="@+id/france_view"
        android:layout_below="@+id/spain_view"
        android:layout_alignLeft="@+id/spain_view"
        android:layout_alignStart="@+id/spain_view"
        android:layout_marginTop="25dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/portugal"
        android:id="@+id/portugal_view"
        android:layout_below="@+id/france_view"
        android:layout_alignLeft="@+id/france_view"
        android:layout_alignStart="@+id/france_view"
        android:layout_marginTop="28dp"/>
</RelativeLayout>
